Ajout de deux règles stylelint
- color-no-hex pour ne pas utiliser l'hexadécimal mais plutôt les constantes du DSFR
- unit-disallowed-list pour utiliser uniquement des unités zoomable donc accessible

--- a/src/components/shared/EnTete/EnTete.module.css
+++ b/src/components/shared/EnTete/EnTete.module.css
@@ -7,5 +7,5 @@
 }
 
 .fr-links-group li:not(:last-child) {
-  border-right: 1px solid var(--grey-900-175);
+  border-right: .05rem solid var(--grey-900-175);
 }
