chore: reformat the codebase

--- a/src/components/MesParametres/MesParametres.module.css
+++ b/src/components/MesParametres/MesParametres.module.css
@@ -1,8 +1,8 @@
 .fr-toggle--bb {
-  border-bottom: .0625rem solid var(--grey-900-175);
+  border-bottom: 0.0625rem solid var(--grey-900-175);
 }
 
-.fr-segmented__elements{
+.fr-segmented__elements {
   width: 100%;
 }
 
