--- a/src/components/transverse/EnTete/EnTete.module.css
+++ b/src/components/transverse/EnTete/EnTete.module.css
@@ -3,5 +3,5 @@
 }
 
 .fr-links-group li:not(:last-child) {
-  border-right: .05rem solid var(--grey-900-175);
+  border-right: 0.05rem solid var(--grey-900-175);
 }
