feat(informations personnelles): modale de suppression de compte

--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,10 @@
 
 .red-button {
   background-color: var(--error-425-625) !important;
+
+    &:disabled {
+      opacity: .5;
+    }
 }
 
 .font-weight-700 {
