refactor(colors): set red-button background color to `red-marianne`
Instead of `error` color.

--- a/src/global.css
+++ b/src/global.css
@@ -7,10 +7,11 @@
 }
 
 .red-button {
-  background-color: var(--error-425-625) !important;
+  background-color: var(--red-marianne-main-472) !important;
 
     &:disabled {
-      opacity: .5;
+      color: var(--blue-france-975-75);
+      opacity: .3;
     }
 }
 
