--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,10 @@
   color: var(--grey-425-625);
 }
 
+.color-red {
+  color: var(--red-marianne-main-472);
+}
+
 .red-button {
   background-color: var(--red-marianne-main-472) !important;
 
@@ -23,6 +27,10 @@
   background-color: var(--blue-france-975-75);
   border-radius: 0.25rem;
   padding: 0 1rem;
+}
+
+.fr-search-bar {
+  width: 50%;
 }
 
 .grey-border {
