Ajout du drawer de création de comité (#220)
* Ajout du drawer de création de comité

* Amélioration des tests sur le formulaire

* Amélioration de l'a11y

* Retours de code review

* Suppression de ajouterUnComiteAction

* Ajout d'un test de server action

* Ajout de la première option par défaut sur le SegmentedControl

--- a/src/global.css
+++ b/src/global.css
@@ -80,7 +80,19 @@ table button {
   z-index: 2;
 }
 
-.drawer-invitation-button {
+.center-button {
   justify-content: center;
   width: 100%;
+}
+
+.w-fit-content {
+  width: fit-content;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.justify-center {
+  justify-content: center;
 }
