--- a/src/components/transverse/MenuLateral/MenuLateral.module.css
+++ b/src/components/transverse/MenuLateral/MenuLateral.module.css
@@ -1,4 +1,12 @@
 .menu-categorie {
-    border-bottom: 0.1rem solid var(--border-default-grey);
-  }
-  
+  border-bottom: 0.1rem solid var(--border-default-grey);
+}
+
+.element-selectionne {
+  background-color: var(--blue-france-975-75);
+}
+
+.element-selectionne-text {
+  color: var(--text-title-blue-france);
+}
+
