--- a/src/global.css
+++ b/src/global.css
@@ -92,3 +92,18 @@ table button {
 .css-19bb58m {
   visibility: unset !important;
 }
+
+.reset-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+input[type='search']::-webkit-search-cancel-button {
+  display: none;
+}
