--- a/src/components/shared/Table/Table.module.css
+++ b/src/components/shared/Table/Table.module.css
@@ -1,3 +1,7 @@
 .fr-table__wrapper::after {
   content: initial !important;
 }
+
+.fr-table__wrapper table tbody td {
+  --border-contrast-grey: var(--grey-900-175);
+}
