--- a/src/components/Gouvernance/Gouvernance.module.css
+++ b/src/components/Gouvernance/Gouvernance.module.css
@@ -7,6 +7,10 @@
   padding: 0;
 }
 
+.resume-note-privee > div > div {
+  padding: 0;
+}
+
 .header div:last-child {
   text-align: right;
 }
@@ -57,26 +61,50 @@
   text-transform: capitalize;
 }
 
-.resume-note-de-contexte {
+.resume-note-privee {
+  background-image: none !important;
+}
+
+.resume-note-privee button {
+  background-color: var(--green-tilleul-verveine-975-75);
+  border-radius: 1rem;
+  height: 20rem !important;
+  overflow: scroll;
+  padding: 2rem;
+  text-align: left;
+}
+
+.resume-note-privee div div:nth-child(1) button {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.resume-note-privee span {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.resume-note-privee p {
+  margin: 0;
+}
+
+.resume-note-privee-vide {
   background-color: var(--green-tilleul-verveine-975-75);
   background-image: none !important;
   border-radius: 1rem;
   height: 20rem !important;
   overflow: scroll;
+  padding: 2rem;
+  text-align: left;
 }
 
-.resume-note-de-contexte div div:nth-child(1) {
+.resume-note-privee-vide div div:nth-child(1) {
   justify-content: space-between;
 }
 
-.resume-note-de-contexte p {
-  margin: 0;
-}
-
-.resume-note-de-contexte p:nth-child(2) {
-  border-top: 0.1rem solid var(--grey-1000-50);
-  margin-top: 0.5rem;
-  padding-top: 0.5rem;
+.resume-note-privee-vide span {
+  padding: 1rem;
 }
 
 .article table {
