--- a/src/global.css
+++ b/src/global.css
@@ -117,3 +117,7 @@ input[type='search']::-webkit-search-cancel-button {
   overflow: auto;
   resize: vertical;
 }
+
+.right {
+  text-align: right;
+}
