configuration du presenter

--- a/src/components/Gouvernance/Gouvernance.module.css
+++ b/src/components/Gouvernance/Gouvernance.module.css
@@ -147,3 +147,23 @@
   justify-content: space-between;
   margin-bottom: 1rem;
 }
+
+.pin-action-deposee {
+  background-color: var(--purple-glycine-950-100);
+  color: var(--blue-ecume-sun-113-625);
+}
+
+.pin-action-en-cours {
+  background-color: var(--green-tilleul-verveine-975-75);
+  color: var(--yellow-tournesol-sun-113-625);
+}
+
+.pin-action-acceptee {
+  background-color: var(--pink-macaron-850-100);
+  color: var(--purple-glycine-950-100);
+}
+
+.pin-action-refusee {
+  background-color: var(--red-marianne-975-75);
+  color: var(--purple-glycine-950-100);
+}
