--- a/src/components/FeuillesDeRoute/FeuillesDeRoute.module.css
+++ b/src/components/FeuillesDeRoute/FeuillesDeRoute.module.css
@@ -1,3 +1,7 @@
+.feuilles-de-route ul {
+  --ul-type: none;
+}
+
 .card-resume-montant-subvention {
   background-color: var(--info-950-100);
   border-radius: 0.5rem;
