--- a/src/global.css
+++ b/src/global.css
@@ -19,14 +19,29 @@
   }
 }
 
+.font-weight-500 {
+  font-weight: 500;
+}
+
 .font-weight-700 {
   font-weight: 700;
 }
 
 .icon-title {
   background-color: var(--blue-france-975-75);
-  border-radius: 0.25rem;
-  padding: 0 1rem;
+  border-radius: 0.5rem;
+  line-height: 4rem;
+  padding: 0 1.5rem;
+}
+
+.background-blue-france {
+  background-color: var(--blue-france-975-75);
+  border-radius: 0.5rem;
+}
+
+.background-info {
+  background-color: var(--info-950-100);
+  border-radius: 0.5rem;
 }
 
 .fr-search-bar {
@@ -38,7 +53,11 @@
 }
 
 .border-radius {
-  border-radius: 1rem;
+  border-radius: 0.5rem;
+}
+
+.space-between {
+  justify-content: space-between;
 }
 
 .menu-border {
@@ -122,6 +141,14 @@ input[type='search']::-webkit-search-cancel-button {
   text-align: right;
 }
 
+.center {
+  text-align: center;
+}
+
 address {
   font-style: unset;
+}
+
+.separator {
+  border-bottom: 0.1rem solid var(--border-default-grey);
 }
