création du action presenter et refacto tests tiptap

--- a/src/components/Action/Action.module.css
+++ b/src/components/Action/Action.module.css
@@ -1,5 +1,5 @@
 .form-container {
-  background-color: var(--red-marianne-975-75);
+  background-color: var(--purple-glycine-950-100);
   border-radius: 1rem;
   padding: 2rem;
 }
