Styles appliqués sur les filtres de la page les membres

--- a/src/components/GestionMembresGouvernance/GestionMembres.module.css
+++ b/src/components/GestionMembresGouvernance/GestionMembres.module.css
@@ -10,7 +10,8 @@
 }
 
 .selecteur {
-  background-color: var(--blue-france-975-75);
+  background-color: var(--blue-france-925-125);
+  color: var(--text-title-blue-france);
 }
 
 .selecteur select {
