fix(aperçu feuilles de route): calcul correct des montants

--- a/src/components/FeuillesDeRoute/FeuillesDeRoute.module.css
+++ b/src/components/FeuillesDeRoute/FeuillesDeRoute.module.css
@@ -21,3 +21,8 @@
 .budget__subvention {
   color: var(--text-title-blue-france);
 }
+
+.besoin {
+  margin-bottom: 0;
+  text-transform: capitalize;
+}
