--- a/src/global.css
+++ b/src/global.css
@@ -9,6 +9,9 @@
 .color-red {
   color: var(--red-marianne-main-472);
 }
+.color-red-strong {
+  color: var(--red-marianne-main-472) !important;
+}
 
 .red-button {
   background-color: var(--red-marianne-main-472) !important;
@@ -36,6 +39,11 @@
 
 .background-blue-france {
   background-color: var(--blue-france-975-75);
+  border-radius: 0.5rem;
+}
+
+.background-red {
+  background-color: var(--red-marianne-975-75);
   border-radius: 0.5rem;
 }
 
