cahcer les sections du tableau de bord et remplir l'espace jusqu'au footer

--- a/src/global.css
+++ b/src/global.css
@@ -209,3 +209,20 @@ address {
 .blue-background {
   background-color: var(--blue-france-975-75);
 }
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex: 1;
+}
