--- a/src/components/shared/Map/Map.module.css
+++ b/src/components/shared/Map/Map.module.css
@@ -1,27 +1,28 @@
-@import 'maplibre-gl/dist/maplibre-gl.css';
+@import url('maplibre-gl/dist/maplibre-gl.css');
+
 .mapContainer {
-  height: 100vh;
-  width: 100%;
   border-radius: 4px;
+  height: 100vh;
   overflow: hidden;
   position: relative;
+  width: 100%;
 }
 
 .maplibregl-canvas {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
 .mapWrapper {
-  position: relative;
   height: 100vh;
+  position: relative;
   width: 100%;
 }
 
 .legendWrapper {
-  position: absolute;
   bottom: 20px;
   left: 50%;
+  position: absolute;
   transform: translateX(-50%);
   z-index: 1;
 } 
