--- a/src/components/shared/Map/Map.module.css
+++ b/src/components/shared/Map/Map.module.css
@@ -2,21 +2,28 @@
 
 .mapContainer {
   border-radius: 4px;
-  height: 100vh;
+  height: 100%;
+  max-height: 600px;
   overflow: hidden;
   position: relative;
   width: 100%;
 }
 
 .maplibregl-canvas {
-  height: 100%;
-  width: 100%;
+  height: 100% !important;
+  width: 100% !important;
+}
+
+.maplibregl-canvas-container {
+  height: 80% !important;
+  width: 100% !important;
 }
 
 .mapWrapper {
-  height: 100vh;
-  position: relative;
+  height: 100%;
+  max-height: 600px;
   width: 100%;
+  position: relative;
 }
 
 .legendWrapper {
@@ -25,4 +32,5 @@
   position: absolute;
   transform: translateX(-50%);
   z-index: 1;
+  pointer-events: none;
 } 
