--- a/src/components/shared/Carte/Legend.module.css
+++ b/src/components/shared/Carte/Legend.module.css
@@ -1,23 +1,23 @@
 .legendContainer {
   align-items: center;
   background-color: rgb(255 255 255 / 80%);
-  border-radius: 8px;
-  color: #333;
+  border-radius: 0.5rem;
+  color: var(--grey-1000);
   display: flex;
   font-family: sans-serif;
-  font-size: 14px;
-  gap: 10px;
-  padding: 8px 12px;
+  font-size: 0.875rem;
+  gap: 0.625rem;
+  padding: 0.5rem 0.75rem;
 }
 
 .gradientBar {
-  border-radius: 4px;
+  border-radius: 0.25rem;
   display: flex;
-  height: 20px;
+  height: 1.25rem;
   overflow: hidden;
-  width: 200px;
+  width: 12.5rem;
 }
 
 .colorBlock {
   flex-grow: 1;
-} 
+}
