--- a/src/components/shared/Carte/Map.module.css
+++ b/src/components/shared/Carte/Map.module.css
@@ -1,14 +1,11 @@
 @import url('maplibre-gl/dist/maplibre-gl.css');
 
 .mapContainer {
-  border-radius: 4px;
+  border-radius: 0.25rem;
   height: 100%;
-  max-height: 600px;
   overflow: hidden;
   position: relative;
-  min-height: 400px;
   width: 100%;
- 
 }
 
 .maplibregl-canvas {
@@ -23,17 +20,15 @@
 
 .mapWrapper {
   height: 100%;
-  max-height: 600px;
-  min-height: 400px;
-  width: 100%;
   position: relative;
+  width: 100%;
 }
 
 .legendWrapper {
-  bottom: 20px;
+  bottom: 1.25rem;
   left: 50%;
+  pointer-events: none;
   position: absolute;
   transform: translateX(-50%);
   z-index: 1;
-  pointer-events: none;
-} 
+}
