Ajustements front sur la liste des membres

--- a/src/components/shared/Table/Table.module.css
+++ b/src/components/shared/Table/Table.module.css
@@ -5,3 +5,7 @@
 .fr-table__wrapper table tbody td {
   --border-contrast-grey: var(--grey-900-175);
 }
+
+.noBgImage {
+  background-image: none !important;
+}
