--- a/src/components/TableauDeBord/TableauDeBord.module.css
+++ b/src/components/TableauDeBord/TableauDeBord.module.css
@@ -10,8 +10,15 @@
 
 .remonter-donnee {
   margin-top: -5vw;
+  pointer-events: none;
+  position: relative;
+  z-index: -1;
 }
 
 .hidden {
   display: none;
+}
+
+.download-button::before {
+  font-size: 1rem !important;
 }
