--- a/src/components/TableauDeBord/TableauDeBord.module.css
+++ b/src/components/TableauDeBord/TableauDeBord.module.css
@@ -10,8 +10,31 @@
 
 .remonter-donnee {
   margin-top: -5vw;
+  pointer-events: none;
+  position: relative;
+  z-index: -1;
 }
 
 .hidden {
   display: none;
+}
+
+.download-button::before {
+  font-size: 1rem !important;
+}
+
+.text-ellipsis {
+  align-items: center;
+  display: flex;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.dot-margin {
+  margin-right: 0.5em;
+}
+
+.item-type-padding {
+  padding-left: 0.1em;
 }
