--- a/src/components/TableauDeBord/TableauDeBord.module.css
+++ b/src/components/TableauDeBord/TableauDeBord.module.css
@@ -24,9 +24,8 @@
 }
 
 .text-ellipsis {
-  align-items: center;
-  display: flex;
   overflow: hidden;
+  text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
