--- a/src/components/vitrine/DonneesTerritoriales/Navigation.module.css
+++ b/src/components/vitrine/DonneesTerritoriales/Navigation.module.css
@@ -1,3 +1,9 @@
+.navigationFixed {
+  background-color: white;
+  left: 0;
+  position: fixed;
+}
+
 .menuItem {
   border-left: 0.125rem solid transparent;
   box-sizing: border-box;
