#1020 : vitrine données / vue mobile. Adaptation du header et du menu secondaire. Adaptation du composant etatsDesLieux

--- a/src/components/vitrine/DonneesTerritoriales/Navigation.module.css
+++ b/src/components/vitrine/DonneesTerritoriales/Navigation.module.css
@@ -4,6 +4,15 @@
   position: fixed;
 }
 
+@media (width <= 62rem) {
+  .navigationFixed {
+    height: auto !important;
+    padding: 0 !important;
+    position: static;
+    width: 100% !important;
+  }
+}
+
 .menuItem {
   border-left: 0.125rem solid transparent;
   box-sizing: border-box;
