--- a/src/components/vitrine/DonneesTerritoriales/Navigation.module.css
+++ b/src/components/vitrine/DonneesTerritoriales/Navigation.module.css
@@ -1,15 +1,34 @@
 .navigationFixed {
   background-color: white;
+  box-shadow: none;
+  gap: 3.5rem;
+  height: 24rem;
   left: 0;
+  opacity: 1;
+  padding: var(--spacing-10v, 2.5rem) var(--spacing-0v, 0) var(--spacing-10v, 2.5rem) var(--spacing-20v, 5rem);
   position: fixed;
+  width: 20rem;
 }
 
 @media (width <= 62rem) {
   .navigationFixed {
-    height: auto !important;
-    padding: 0 !important;
+    gap: 0;
+    height: auto;
+    padding: 0;
     position: static;
-    width: 100% !important;
+    width: 100%;
+  }
+
+  .navigationFixed :global(.fr-sidemenu__btn) {
+    margin-left: 1rem;
+  }
+
+  /* Forcer le collapse fermé par défaut en mobile */
+  .navigationFixed :global(.fr-collapse:not(.fr-collapse--expanded)) {
+    --collapse: -100%;
+
+    max-height: 0;
+    visibility: hidden;
   }
 }
 
