#1019 Vitrine données : adaptation vues au mobile

--- a/src/components/coop/Statistiques/_components/ProgressItemList.module.css
+++ b/src/components/coop/Statistiques/_components/ProgressItemList.module.css
@@ -64,3 +64,14 @@
   display: flex;
   justify-content: center;
 }
+
+/* Responsive mobile */
+@media (width <= 48rem) {
+  .rightPart {
+    display: none;
+  }
+
+  .leftPart {
+    width: 100%;
+  }
+}
