--- a/src/app/vitrine/lieux/page.module.css
+++ b/src/app/vitrine/lieux/page.module.css
@@ -1,3 +1,18 @@
+.sectionTitle {
+  color: var(--text-title-blue-france);
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 3rem;
+  text-align: center;
+}
+
+@media (width <= 48rem) {
+  .sectionTitle {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
 .visualisationImage {
   order: 1;
   padding: 0;
