--- a/src/components/vitrine/BarreLogosPartenaires/BarreLogosPartenaires.module.css
+++ b/src/components/vitrine/BarreLogosPartenaires/BarreLogosPartenaires.module.css
@@ -1,27 +1,27 @@
 .container {
+  align-items: center;
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
-  align-items: center;
+  gap: 0.5rem;
   justify-content: center;
 }
 
 .logo,
 .logoWithBackground {
   display: flex;
-  width: 50px;
-  height: 50px;
+  height: 3.125rem;
+  width: 3.125rem;
 }
 
 .logo img,
 .logoWithBackground img {
-  width: 100%;
   height: 100%;
   object-fit: contain;
+  width: 100%;
 }
 
 .logoWithBackground {
-  overflow: hidden;
   background-color: white;
-  border-radius: 6.667px;
+  border-radius: 0.417rem;
+  overflow: hidden;
 }
