--- a/src/components/coop/Statistiques/SelecteurRangeDates.module.css
+++ b/src/components/coop/Statistiques/SelecteurRangeDates.module.css
@@ -1,42 +1,38 @@
-.selecteurRangeDates {
+.container {
   position: relative;
 }
 
-.dialog {
+.filled {
+  background-color: var(--background-alt-blue-france) !important;
+}
+
+.open {
+  background-color: var(--background-contrast-grey) !important;
+}
+
+.popover {
   background-color: var(--background-default-grey);
-  border: 1px solid var(--border-default-grey);
   border-radius: 0.5rem;
   box-shadow: var(--raised-shadow);
-  max-width: 20rem;
-  padding: 0;
-  width: calc(100vw - 2rem);
-}
-
-.dialog::backdrop {
-  background-color: rgb(0 0 0 / 50%);
-}
-
-.dialogContent {
+  margin-top: 0.5rem;
   padding: 1.5rem;
+  position: absolute;
+  right: 0;
+  top: 100%;
+  width: 22rem;
+  z-index: 1000;
 }
 
-/* Mobile : dialog en plein écran pour le datepicker natif */
-@media (width < 36rem) {
-  .dialog {
-    border: none;
-    border-radius: 0;
-    height: 100%;
-    margin: 0;
-    max-height: 100%;
-    max-width: 100%;
-    width: 100%;
-  }
+.dateInput {
+  font-size: 0.875rem;
+  padding: 0.5rem;
+}
 
-  .dialogContent {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    padding: 2rem;
+/* Mobile : popover pleine largeur */
+@media (width < 36rem) {
+  .popover {
+    left: 0;
+    right: 0;
+    width: auto;
   }
 }
